Salesforce CPQ/main/default/objects/QuoteLine__c/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <description>Specifies the tax code for taxation rules.</description>
    <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
    <label>Tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>