Salesforce CPQ/main/default/objects/QuoteLine__c/fields/TotalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountAmount__c</fullName>
    <description>Total discount amount for this line item including volume discount, contracted discount, and additional discount.</description>
    <formula>IF(Bundled__c, 0,
IF(ISPICKVAL(DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; NOT(Existing__c), (ProratedListPrice__c * Quantity__c - CustomerPrice__c),
IF(ISPICKVAL(DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; Existing__c, (ProratedListPrice__c * (Quantity__c-PriorQuantity__c) - CustomerPrice__c),
(ProratedListPrice__c -  CustomerPrice__c) * EffectiveQuantity__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total discount amount for this line item including volume discount, contracted discount, and additional discount.</inlineHelpText>
    <label>Total Discount (Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>