Salesforce CPQ/main/default/objects/QuoteLine__c/fields/TotalDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountRate__c</fullName>
    <description>Total discount for this line item including volume discount, contracted discount, and additional discount.</description>
    <formula>IF(ProratedListPrice__c == 0, 0,
IF(ISPICKVAL(DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; NOT(Existing__c),
IF(Quantity__c == 0, 0, (ProratedListPrice__c * Quantity__c - CustomerPrice__c) / (Quantity__c * ProratedListPrice__c)),
IF(ISPICKVAL(DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; Existing__c,
IF(Quantity__c == PriorQuantity__c, 0, (ProratedListPrice__c * (Quantity__c-PriorQuantity__c) - CustomerPrice__c) / ((Quantity__c-PriorQuantity__c) * ProratedListPrice__c)),
(ProratedListPrice__c - CustomerPrice__c) / ProratedListPrice__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total discount for this line item including volume discount, contracted discount, and additional discount.</inlineHelpText>
    <label>Total Discount (%)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>