Salesforce CPQ/main/default/objects/QuoteLine__c/fields/UpgradedQuantity__c.field-meta.xml
<CustomField>
    <fullName>UpgradedQuantity__c</fullName>
    <description>Quantity being upgraded.</description>
    <inlineHelpText>Portion of this line&apos;s Prior Quantity being upgraded to another product.</inlineHelpText>
    <label>Upgraded Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>