Salesforce CPQ/main/default/objects/QuoteLine__c/fields/UpgradedSubscription__c.field-meta.xml
<CustomField>
    <fullName>UpgradedSubscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subscription being upgraded by this quote line.</description>
    <inlineHelpText>Subscription being upgraded by this quote line. When the quote is contracted this subscription will have its Terminated Date field populated.</inlineHelpText>
    <label>Upgraded Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Quote Lines (Upgrade)</relationshipLabel>
    <relationshipName>UpgradeLines</relationshipName>
    <type>Lookup</type>
</CustomField>