Salesforce CPQ/main/default/objects/QuoteLine__c/fields/UpliftAmount__c.field-meta.xml
<CustomField>
    <fullName>UpliftAmount__c</fullName>
    <description>Uplift (Amt) is measured as a currency amount. This is a system-calculated field, as Uplift can only be applied to MDQ segments in percent.</description>
    <inlineHelpText>Uplift (Amt) is measured as a currency amount. This is a system-calculated field, as Uplift can only be applied to MDQ segments in percent.</inlineHelpText>
    <label>Uplift (Amt)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>