Salesforce CPQ/main/default/objects/QuoteLine__c/validationRules/Additional_discount_percent_or_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_discount_percent_or_amount</fullName>
    <active>true</active>
    <description>Validates additional discount is specified as a percentage or absolute amount but not both.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Discount__c)), NOT(ISBLANK(AdditionalDiscountAmount__c)),NOT(Incomplete__c))</errorConditionFormula>
    <errorMessage>You may not specify additional discount as both percentage and absolute amount.</errorMessage>
</ValidationRule>