Salesforce CPQ/main/default/objects/QuoteLine__c/validationRules/Markup_percent_or_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Markup_percent_or_amount</fullName>
    <active>true</active>
    <description>Validates markup is specified as a percentage or absolute amount but not both.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(MarkupRate__c)), NOT(ISBLANK(MarkupAmount__c)),NOT(Incomplete__c))</errorConditionFormula>
    <errorMessage>You may not specify markup as both percentage and absolute amount.</errorMessage>
</ValidationRule>