Salesforce CPQ/main/default/objects/QuoteLine__c/validationRules/RecurringChargeTypeMustHaveBillingType.validationRule-meta.xml
<ValidationRule>
    <fullName>RecurringChargeTypeMustHaveBillingType</fullName>
    <active>true</active>
    <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
    <errorConditionFormula>AND(ISPICKVAL(ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(BillingType__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>BillingType__c</errorDisplayField>
    <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
</ValidationRule>