Salesforce CPQ/main/default/objects/QuoteLine__c/validationRules/Validate_billing_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_billing_type</fullName>
    <active>true</active>
    <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
    <errorConditionFormula>OR( 
AND(ISPICKVAL(ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(BillingType__c, &quot;&quot;))))</errorConditionFormula>
    <errorDisplayField>BillingType__c</errorDisplayField>
    <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
</ValidationRule>